[package]
name = "cli-warrior-dungeons"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termsize = "0.1"
rand = "0.8.0"

[[example]]
name = "termsize"
path = "examples/term_size.rs"

[[example]]
name = "random"
path = "examples/random_int.rs"

[[example]]
name = "run_logo"
path = "examples/run_logo.rs"
